Moved to Hyprland

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -8,3 +8,14 @@ Host pi
     HostName 192.168.0.80
     User root
     IdentityFile ~/.ssh/id_ed25519_pi
+
+Host server
+    HostName server
+    User tefloon
+    IdentityFile ~/.ssh/ed25519_server
+
+
+Host *
+    ControlMaster auto
+    ControlPath ~/.ssh/cm-%r@%h:%p
+    ControlPersist 10m
