--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -3,9 +3,19 @@
 # #######################################################################################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = HDMI-A-2, 1920x1080@60, 1920x0, 1
-monitor = DP-1,     1920x1080@60, 3840x0, 1
-monitor = HDMI-A-1, 1920x1080@60, 0x0, 1
+monitor = HDMI-A-2, 1920x1080@60, 0x0, 1
+monitor = DP-1,     1920x1080@60, 1920x0, 1
+monitor = HDMI-A-1, 1920x1080@60, 3840x0, 1
+
+# Workspaces
+# Assign workspaces to specific monitors
+workspace = 3, monitor:HDMI-A-1, default[true]
+workspace = 1, monitor:HDMI-A-2, default[true]
+workspace = 2, monitor:DP-1, default[true]
+
+workspace = 6, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-2
+workspace = 5, monitor:DP-1
 
 # -----------------------------------------------------
 # Autostart (Programs to launch on login)
@@ -13,7 +23,7 @@ monitor = HDMI-A-1, 1920x1080@60, 0x0, 1
 exec-once = waybar # Your status bar
 exec-once = mako # Your notification daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege requests
-exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
+# exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
 exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
 
 # -----------------------------------------------------
@@ -21,6 +31,7 @@ exec-once = dbus-update-activation-environment --systemd --all # Helps apps find
 # -----------------------------------------------------
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # For theming Qt apps
+env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
 
 # -----------------------------------------------------
 # Global Settings
@@ -29,6 +40,8 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 $mainMod = SUPER
+$animSpeed = 2
+$editor = subl
 
 # -----------------------------------------------------
 # Input Devices & Keyboard Layout
@@ -37,6 +50,10 @@ input {
     kb_layout = pl
     kb_options = caps:super # <-- This makes your Caps Lock key another Super key!
 
+    # --- Faster keyboard repeat settings ---
+    repeat_rate = 50
+    repeat_delay = 250
+
     follow_mouse = 1
     accel_profile = flat
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -44,19 +61,23 @@ input {
     touchpad {
         natural_scroll = no
     }
+
 }
 
 # -----------------------------------------------------
 # General Appearance & Layout
 # -----------------------------------------------------
 general {
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
+    gaps_in = 3
+    gaps_out = 5
+    border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
     allow_tearing = false
+
+ #   cursor_inactive_timeout = 1
+ #   no_cursor_warps = true
 }
 
 dwindle {
@@ -68,50 +89,60 @@ dwindle {
 # Decoration (Rounding, Shadows, Blur)
 # -----------------------------------------------------
 decoration {
-    rounding = 10
-    
+    rounding = 5
+
+    active_opacity=1
+    inactive_opacity=1
+    dim_inactive = true
+    dim_strength = 0.2
     blur {
         enabled = true
         size = 3
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+
 }
 
 # -----------------------------------------------------
 # Animations
 # -----------------------------------------------------
 animations {
-    enabled = yes
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    enabled = yes, please :)
+
+    # --- MODIFIED: A snappier bezier curve ---
+    bezier = snappy, 0.17, 0.9, 0.2, 1.0
+
+    # --- MODIFIED: Faster animation speeds (LOWER number = faster) ---
+    animation = windows, 1, $animSpeed, snappy
+    animation = windowsOut, 1, $animSpeed, default, popin 80%
+    animation = border, 1, $animSpeed, default
+    animation = borderangle, 1, $animSpeed, default
+    animation = fade, 1, $animSpeed, default
+    animation = workspaces, 1, $animSpeed, default
+
+    animation = layers, 1, $animSpeed, snappy
 }
 
 # -----------------------------------------------------
 # Window Rules
 # -----------------------------------------------------
-windowrulev2 = float,class:^(copyq)$
-windowrulev2 = float,class:^(pavucontrol)$
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = suppressevent maximize, class:.* # Ignore maximize requests from apps
+windowrulev2 = float, class:^(org.kde.dolphin)$
+windowrulev2 = float,class:^(copyq)$s
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$   # make the audio control float
+windowrulev2 = float,class:^(brave)$                        # make brave file picker floar
+windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
 
 # -----------------------------------------------------
 # Keybindings
 # -----------------------------------------------------
 
 # --- Application Launchers ---
-bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, E, exec, $fileManager
+
+bind = $mainMod, R, exec, $editor
 bind = $mainMod, B, exec, brave --ozone-platform=wayland
 
 # --- Window Management ---
@@ -127,10 +158,10 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 # --- Move Active Window ---
-bind = $mainMod CTRL, left, movewindow, l
-bind = $mainMod CTRL, right, movewindow, r
-bind = $mainMod CTRL, up, movewindow, u
-bind = $mainMod CTRL, down, movewindow, d
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 # --- Workspace Switching ---
 bind = $mainMod, 1, workspace, 1
@@ -172,9 +203,9 @@ bind = $mainMod, L, exec, swaylock # Lock the screen
 
 # --- Screenshots (Wayland Native) ---
 # Select region and copy to clipboard
-bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
+# bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 # Select region and save to file
-bind = SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%m-%s.png')
+# bind = SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%m-%s.png')
 
 # --- Multimedia Keys ---
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -186,3 +217,7 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioPlay, exec, playerctl play-pause
+
+# Keybind to show a notification with the active window's class AND title.
+bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')"
+
