Dark mode default. Sending to workspace.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -32,11 +32,13 @@ exec-once = dbus-update-activation-environment --systemd --all # Helps apps find
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # For theming Qt apps
 env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
+env = GTK_THEME,Adwaita:dark
 
 # -----------------------------------------------------
 # Global Settings
 # -----------------------------------------------------
 $terminal = kitty
+$notes = obsidian
 $fileManager = dolphin
 $menu = wofi --show drun
 $mainMod = SUPER
@@ -140,6 +142,7 @@ windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize re
 # --- Application Launchers ---
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, F, exec, $notes
 # bind = $mainMod, E, exec, $fileManager
 
 bind = $mainMod, R, exec, $editor
@@ -202,10 +205,7 @@ bind = $mainMod SHIFT, E, exit, # Exit Hyprland
 bind = $mainMod, L, exec, swaylock # Lock the screen
 
 # --- Screenshots (Wayland Native) ---
-# Select region and copy to clipboard
-# bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
-# Select region and save to file
-# bind = SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%m-%s.png')
+bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # --- Multimedia Keys ---
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -221,3 +221,36 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 # Keybind to show a notification with the active window's class AND title.
 bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')"
 
+# will switch to a submap called resize
+bind = $mainMod, Tab, submap, movewin
+
+# will start a submap called "resize"
+submap = movewin
+
+# sets repeatable binds for sending to workspace
+binde = , 1, movetoworkspace, 1
+binde = , 1, submap, reset
+
+binde = , 1, movetoworkspace, 1
+binde = , 1, submap, reset
+
+binde = , 2, movetoworkspace, 2
+binde = , 2, submap, reset
+
+binde = , 3, movetoworkspace, 3
+binde = , 3, submap, reset
+
+binde = , 4, movetoworkspace, 4
+binde = , 4, submap, reset
+
+binde = , 5, movetoworkspace, 5
+binde = , 5, submap, reset
+
+binde = , 6, movetoworkspace, 6
+binde = , 6, submap, reset
+
+# use reset to go back to the global submap
+bind = , escape, submap, reset
+
+# will reset the submap, which will return to the global submap
+submap = reset
