Fixed opacity for brave. HTTPS/SSH for repo.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -93,8 +93,8 @@ dwindle {
 decoration {
     rounding = 5
 
-    active_opacity=1
-    inactive_opacity=1
+#    active_opacity=.8
+#    inactive_opacity=.8
     dim_inactive = true
     dim_strength = 0.2
     blur {
@@ -133,7 +133,14 @@ windowrulev2 = float, class:^(org.kde.dolphin)$
 windowrulev2 = float,class:^(copyq)$s
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$   # make the audio control float
 windowrulev2 = float,class:^(brave)$                        # make brave file picker floar
+windowrulev2 = float,class:^(brave-.*)$ 
 windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
+
+# per-window opacity
+windowrulev2 = float,class:^(brave-(?!browser\b)[a-zA-Z0-9_-])s+$s
+windowrulev2 = opacity 0.85, class:.*
+windowrulev2 = opacity 1,class:^(brave-browser)$,title:.*YouTube.*
+
 
 # -----------------------------------------------------
 # Keybindings
