Wallpaper. Readme for X11 cursors.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -17,22 +17,20 @@ workspace = 6, monitor:HDMI-A-1
 workspace = 4, monitor:HDMI-A-2
 workspace = 5, monitor:DP-1
 
-# -----------------------------------------------------
-# Autostart (Programs to launch on login)
-# -----------------------------------------------------
-exec-once = waybar # Your status bar
-exec-once = mako # Your notification daemon
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege requests
-# exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
-exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
 
 # -----------------------------------------------------
 # Environment Variables
 # -----------------------------------------------------
+#env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
+#env = HYPRCURSOR_SIZE,24
+
+# X-11 fallback
+env = XCURSOR_THEME,Breeze_Light
 env = XCURSOR_SIZE,24
+
 env = QT_QPA_PLATFORMTHEME,qt5ct # For theming Qt apps
-env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
-env = GTK_THEME,Adwaita:dark
+# env = GTK_THEME,Adwaita:dark
+env = OZONE_PLATFORM,wayland
 
 # -----------------------------------------------------
 # Global Settings
@@ -44,6 +42,22 @@ $menu = wofi --show drun
 $mainMod = SUPER
 $animSpeed = 2
 $editor = subl
+$browser = zen-browser
+
+# -----------------------------------------------------
+# Autostart (Programs to launch on login)
+# -----------------------------------------------------
+exec-once = waybar # Your status bar
+exec-once = mako # Your notification daemon
+exec-once = hyprpaper # Your notification daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege requests
+# exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
+exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
+# exec-once = [workspace 1 silent] subl
+exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 4 silent] franz
+exec-once = [workspace 3 silent] kitty
+exec-once = [workspace special:magic silent] obsidian
 
 # -----------------------------------------------------
 # Input Devices & Keyboard Layout
@@ -93,7 +107,7 @@ dwindle {
 decoration {
     rounding = 5
 
-#    active_opacity=.8
+   active_opacity=1
 #    inactive_opacity=.8
     dim_inactive = true
     dim_strength = 0.2
@@ -130,16 +144,20 @@ animations {
 # Window Rules
 # -----------------------------------------------------
 windowrulev2 = float, class:^(org.kde.dolphin)$
-windowrulev2 = float,class:^(copyq)$s
+windowrulev2 = float,class:^(com.github.hluk.copyq)$
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$   # make the audio control float
 windowrulev2 = float,class:^(brave)$                        # make brave file picker floar
-windowrulev2 = float,class:^(brave-.*)$ 
 windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
 
 # per-window opacity
-windowrulev2 = float,class:^(brave-(?!browser\b)[a-zA-Z0-9_-])s+$s
-windowrulev2 = opacity 0.85, class:.*
-windowrulev2 = opacity 1,class:^(brave-browser)$,title:.*YouTube.*
+# windowrulev2 = opacity 0.93, class:.*
+windowrulev2 = opacity .9, class:^(Franz)$
+windowrulev2 = opacity .8, class:^(kitty)$
+windowrulev2 = opacity .8, class:^(sublime_text)$
+
+#placement
+windowrulev2 = workspace 1, class:^(sublime_text)$
+windowrulev2 = workspace 4, class:^(Franz)$
 
 
 # -----------------------------------------------------
@@ -153,7 +171,7 @@ bind = $mainMod, F, exec, $notes
 # bind = $mainMod, E, exec, $fileManager
 
 bind = $mainMod, R, exec, $editor
-bind = $mainMod, B, exec, brave --ozone-platform=wayland
+bind = $mainMod, B, exec, $browser --ozone-platform=wayland
 
 # --- Window Management ---
 bind = $mainMod, Q, killactive,
@@ -201,6 +219,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+
 # --- Mouse and Scrolling ---
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -228,7 +247,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 # Keybind to show a notification with the active window's class AND title.
 bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')"
 
-# will switch to a submap called resize
+# will switch to a submap called movewin
 bind = $mainMod, Tab, submap, movewin
 
 # will start a submap called "resize"
