Switch franz to ferdium. Added kitty config. Added wofi launch script.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -21,15 +21,16 @@ workspace = 5, monitor:DP-1
 # -----------------------------------------------------
 # Environment Variables
 # -----------------------------------------------------
-#env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
-#env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
+env = HYPRCURSOR_SIZE,24
+
+env = GTK_THEME,Adwaita:dark
 
 # X-11 fallback
 env = XCURSOR_THEME,Breeze_Light
 env = XCURSOR_SIZE,24
 
 env = QT_QPA_PLATFORMTHEME,qt5ct # For theming Qt apps
-# env = GTK_THEME,Adwaita:dark
 env = OZONE_PLATFORM,wayland
 
 # -----------------------------------------------------
@@ -38,7 +39,7 @@ env = OZONE_PLATFORM,wayland
 $terminal = kitty
 $notes = obsidian
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = /home/tefloon/.config/wofi/wofi-toggle.sh
 $mainMod = SUPER
 $animSpeed = 2
 $editor = subl
@@ -53,11 +54,12 @@ exec-once = hyprpaper # Your notification daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege requests
 # exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
 exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = [workspace 1 silent] subl
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] franz
+exec-once = [workspace 4 silent] ferdium
 exec-once = [workspace 3 silent] kitty
-exec-once = [workspace special:magic silent] obsidian
+# exec-once = [workspace special:magic silent] obsidian
 
 # -----------------------------------------------------
 # Input Devices & Keyboard Layout
@@ -84,13 +86,19 @@ input {
 # General Appearance & Layout
 # -----------------------------------------------------
 general {
-    gaps_in = 3
+    gaps_in = 5
     gaps_out = 5
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    border_size = 2
+    col.active_border = rgba(319be8ee) rgba(31e864ee) 30deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
     allow_tearing = false
+    resize_on_border = true
+    hover_icon_on_border = true
+    
+ #   snap{
+ #       enabled: true
+ #   }
 
  #   cursor_inactive_timeout = 1
  #   no_cursor_warps = true
@@ -105,16 +113,17 @@ dwindle {
 # Decoration (Rounding, Shadows, Blur)
 # -----------------------------------------------------
 decoration {
-    rounding = 5
+    rounding = 10
+    rounding_power = 4
 
-   active_opacity=1
+    active_opacity=1
 #    inactive_opacity=.8
     dim_inactive = true
     dim_strength = 0.2
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+        passes = 2
     }
 
 
@@ -152,8 +161,8 @@ windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize re
 # per-window opacity
 # windowrulev2 = opacity 0.93, class:.*
 windowrulev2 = opacity .9, class:^(Franz)$
-windowrulev2 = opacity .8, class:^(kitty)$
-windowrulev2 = opacity .8, class:^(sublime_text)$
+windowrulev2 = opacity .85, class:^(kitty)$
+windowrulev2 = opacity .85, class:^(sublime_text)$
 
 #placement
 windowrulev2 = workspace 1, class:^(sublime_text)$
@@ -247,36 +256,4 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 # Keybind to show a notification with the active window's class AND title.
 bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')"
 
-# will switch to a submap called movewin
-bind = $mainMod, Tab, submap, movewin
 
-# will start a submap called "resize"
-submap = movewin
-
-# sets repeatable binds for sending to workspace
-binde = , 1, movetoworkspace, 1
-binde = , 1, submap, reset
-
-binde = , 1, movetoworkspace, 1
-binde = , 1, submap, reset
-
-binde = , 2, movetoworkspace, 2
-binde = , 2, submap, reset
-
-binde = , 3, movetoworkspace, 3
-binde = , 3, submap, reset
-
-binde = , 4, movetoworkspace, 4
-binde = , 4, submap, reset
-
-binde = , 5, movetoworkspace, 5
-binde = , 5, submap, reset
-
-binde = , 6, movetoworkspace, 6
-binde = , 6, submap, reset
-
-# use reset to go back to the global submap
-bind = , escape, submap, reset
-
-# will reset the submap, which will return to the global submap
-submap = reset
