--- a/dotfiles/.config/hypr/hyprpaper.conf
+++ b/dotfiles/.config/hypr/hyprpaper.conf
@@ -3,6 +3,8 @@
 
 # Preload Kath's contest-winning wallpaper
 preload = /home/tefloon/.local/share/wallpapers/kath.png
+# preload = /home/tefloon/.local/share/wallpapers/califlour.png
 
 # Set wallpaper for all monitors
 wallpaper = , /home/tefloon/.local/share/wallpapers/kath.png
+# wallpaper = , /home/tefloon/.local/share/wallpapers/califlour.png
