Solved menu blur bug. Back to Brave

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -43,7 +43,7 @@ $menu = /home/tefloon/.config/wofi/wofi-toggle.sh
 $mainMod = SUPER
 $animSpeed = 2
 $editor = subl
-$browser = zen-browser
+$browser = brave
 
 # -----------------------------------------------------
 # Autostart (Programs to launch on login)
@@ -160,13 +160,17 @@ windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize re
 
 # per-window opacity
 # windowrulev2 = opacity 0.93, class:.*
-windowrulev2 = opacity .9, class:^(Franz)$
+windowrulev2 = opacity .9, class:^(Ferdium)$
 windowrulev2 = opacity .85, class:^(kitty)$
 windowrulev2 = opacity .85, class:^(sublime_text)$
 
 #placement
 windowrulev2 = workspace 1, class:^(sublime_text)$
-windowrulev2 = workspace 4, class:^(Franz)$
+windowrulev2 = workspace 4, class:^(Ferdium)$
+
+# fix for blur around the menus and such
+windowrulev2 = noblur, class:^()$
+windowrulev2 = noblur, floating:1, class:^()$
 
 
 # -----------------------------------------------------
