Added pacman repositories update in install_packages.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -30,7 +30,11 @@ env = GTK_THEME,Adwaita:dark
 env = XCURSOR_THEME,Breeze_Light
 env = XCURSOR_SIZE,24
 
-env = QT_QPA_PLATFORMTHEME,qt5ct # For theming Qt apps
+# Qt theming
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_STYLE_OVERRIDE,Adwaita-Dark
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+
 env = OZONE_PLATFORM,wayland
 
 # -----------------------------------------------------
