--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -17,26 +17,22 @@ workspace = 6, monitor:HDMI-A-1
 workspace = 4, monitor:HDMI-A-2
 workspace = 5, monitor:DP-1
 
-
 # -----------------------------------------------------
 # Environment Variables
 # -----------------------------------------------------
+# Cursor theme
 env = HYPRCURSOR_THEME,HyprBibataModernClassicSVG
 env = HYPRCURSOR_SIZE,24
 
 env = GTK_THEME,Adwaita:dark
 
-# X-11 fallback
-env = XCURSOR_THEME,Breeze_Light
+env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
-# Qt theming
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_STYLE_OVERRIDE,Adwaita-Dark
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+# Remove Kvantum override completely
+# env = QT_STYLE_OVERRIDE,kvantum
 
 env = OZONE_PLATFORM,wayland
-
 # -----------------------------------------------------
 # Global Settings
 # -----------------------------------------------------
@@ -54,13 +50,15 @@ $browser = brave
 # -----------------------------------------------------
 exec-once = waybar # Your status bar
 exec-once = mako # Your notification daemon
-exec-once = hyprpaper # Your notification daemon
+exec-once = hyprpaper # Your wallpaper daemon
+exec-once = kdeconnectd
+exec-once = kdeconnect-indicator
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege requests
 # exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
 exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = [workspace 1 silent] subl
-exec-once = [workspace 2 silent] $browser
+# exec-once = [workspace 2 silent] $browser
 exec-once = [workspace 4 silent] ferdium
 exec-once = [workspace 3 silent] kitty
 # exec-once = [workspace special:magic silent] obsidian
@@ -159,8 +157,14 @@ animations {
 windowrulev2 = float, class:^(org.kde.dolphin)$
 windowrulev2 = float,class:^(com.github.hluk.copyq)$
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$   # make the audio control float
+windowrulev2 = float,class:^(org.kde.kdeconnect.app)$   
+windowrulev2 = float,class:^(org.kde.kdeconnect.sms)$  
 windowrulev2 = float,class:^(brave)$                        # make brave file picker floar
+
 windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
+
+windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.app)$   
+windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.sms)$ 
 
 # per-window opacity
 # windowrulev2 = opacity 0.93, class:.*
@@ -169,7 +173,6 @@ windowrulev2 = opacity .85, class:^(kitty)$
 windowrulev2 = opacity .85, class:^(sublime_text)$
 
 #placement
-windowrulev2 = workspace 1, class:^(sublime_text)$
 windowrulev2 = workspace 4, class:^(Ferdium)$
 
 # fix for blur around the menus and such
