--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -14,6 +14,11 @@ Host server
     User tefloon
     IdentityFile ~/.ssh/ed25519_server
 
+Host hostinger
+    HostName hostinger
+    User root
+    IdentityFile ~/.ssh/id_ed25519_hostinger 
+
 
 Host *
     ControlMaster auto
