--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ enable_audio_bell  no
 foreground   #c0caf5
 background   #1a1b26
 selection_foreground #1a1b26
-selection_background #171922
+selection_background #7aa2f7
 color0  #15161e
 color1  #f7768e
 color2  #9ece6a
