Switched to p10k theme. Added FileChooser.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -43,7 +43,7 @@ $menu = /home/tefloon/.config/wofi/wofi-toggle.sh
 $mainMod = SUPER
 $animSpeed = 2
 $editor = subl
-$browser = brave
+$browser = thorium-browser
 
 # -----------------------------------------------------
 # Autostart (Programs to launch on login)
@@ -57,11 +57,15 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege reque
 # exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' # Idle management
 exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# In your Hyprland config
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 # exec-once = [workspace 1 silent] subl
-# exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 2 silent] $browser
 exec-once = [workspace 4 silent] ferdium
 exec-once = [workspace 3 silent] kitty
-# exec-once = [workspace special:magic silent] obsidian
+exec-once = [workspace special:magic silent] obsidian
 
 # -----------------------------------------------------
 # Input Devices & Keyboard Layout
@@ -103,7 +107,7 @@ general {
  #   }
 
  #   cursor_inactive_timeout = 1
- #   no_cursor_warps = true
+   # no_cursor_warps = true
 }
 
 dwindle {
@@ -119,13 +123,13 @@ decoration {
     rounding_power = 4
 
     active_opacity=1
-#    inactive_opacity=.8
-    dim_inactive = true
-    dim_strength = 0.2
+    # inactive_opacity=0.8
+    #dim_inactive = true
+    dim_strength = 0.1
     blur {
         enabled = true
-        size = 5
-        passes = 2
+        size = 4
+        passes = 3
     }
 
 
@@ -166,11 +170,13 @@ windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize re
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.app)$   
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.sms)$ 
 
+$opacity = 0.75
+
 # per-window opacity
 # windowrulev2 = opacity 0.93, class:.*
-windowrulev2 = opacity .9, class:^(Ferdium)$
-windowrulev2 = opacity .85, class:^(kitty)$
-windowrulev2 = opacity .85, class:^(sublime_text)$
+windowrulev2 = opacity $opacity, class:^(Ferdium)$
+windowrulev2 = opacity $opacity, class:^(kitty)$
+windowrulev2 = opacity $opacity, class:^(sublime_text)$
 
 #placement
 windowrulev2 = workspace 4, class:^(Ferdium)$
