Added blurry glass to waybar. Changed p10k to minimal.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -122,17 +122,16 @@ decoration {
     rounding = 10
     rounding_power = 4
 
-    active_opacity=1
-    # inactive_opacity=0.8
-    #dim_inactive = true
+    active_opacity = 1
     dim_strength = 0.1
+    
     blur {
         enabled = true
-        size = 4
-        passes = 3
+        size = 5        # Increased from 4
+        passes = 4      # Increased from 3
+        new_optimizations = true
+        xray = true     # This helps with layerrule xray
     }
-
-
 }
 
 # -----------------------------------------------------
@@ -184,6 +183,14 @@ windowrulev2 = workspace 4, class:^(Ferdium)$
 # fix for blur around the menus and such
 windowrulev2 = noblur, class:^()$
 windowrulev2 = noblur, floating:1, class:^()$
+
+# waybar rules
+# Remove the current waybar layer rules and replace with these:
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+# Or try this combination:
+# layerrule = blur, waybar  
+# layerrule = ignorealpha 0.1, waybar
 
 
 # -----------------------------------------------------
