Waybar config continues...

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -182,6 +182,8 @@ windowrulev2 = workspace 4, class:^(Ferdium)$
 
 # fix for blur around the menus and such
 windowrulev2 = noblur, class:^()$
+windowrulev2 = noblur, class:^(Xdg-desktop-portal-gtk)$
+windowrulev2 = noborder, class:^(Xdg-desktop-portal-gtk)$
 windowrulev2 = noblur, floating:1, class:^()$
 
 # waybar rules
