--- a/dotfiles/.config/waybar/config.jsonc
+++ b/dotfiles/.config/waybar/config.jsonc
@@ -137,7 +137,7 @@
         "tooltip": false
     },
     "custom/power": {
-        "format": "󰤆",
+        "format": "⏻",
         "tooltip": false,
         "on-click": "~/.config/rofi/powermenu/type-2/powermenu.sh &"
     }
