Removed spotipy, fixed qalc, added transparency to vscode

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -176,6 +176,7 @@ $opacity = 0.75
 windowrulev2 = opacity $opacity, class:^(Ferdium)$
 windowrulev2 = opacity $opacity, class:^(kitty)$
 windowrulev2 = opacity $opacity, class:^(sublime_text)$
+windowrulev2 = opacity $opacity, class:^(code-oss)$
 
 #placement
 windowrulev2 = workspace 4, class:^(Ferdium)$
