Before jumping ship.

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -163,20 +163,26 @@ windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$   # make the audio con
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$   
 windowrulev2 = float,class:^(org.kde.kdeconnect.sms)$  
 windowrulev2 = float,class:^(brave)$                        # make brave file picker floar
+windowrulev2 = float, class:^(Beyond-All-Reason)$,
 
 windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
 
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.app)$   
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.sms)$ 
 
-$opacity = 0.75
+$opacity = 0.85
 
 # per-window opacity
-# windowrulev2 = opacity 0.93, class:.*
 windowrulev2 = opacity $opacity, class:^(Ferdium)$
 windowrulev2 = opacity $opacity, class:^(kitty)$
 windowrulev2 = opacity $opacity, class:^(sublime_text)$
 windowrulev2 = opacity $opacity, class:^(code-oss)$
+windowrulev2 = opacity $opacity, class:^(Thorium-browser)$
+windowrulev2 = fullscreen, class:^(spring)$,
+
+# YouTube app is full opaque
+windowrulev2 = opacity 1, initialTitle:^(YouTube)$
+
 
 #placement
 windowrulev2 = workspace 4, class:^(Ferdium)$
@@ -195,6 +201,7 @@ layerrule = ignorezero, waybar
 # layerrule = blur, waybar  
 # layerrule = ignorealpha 0.1, waybar
 
+windowrulev2 = noblur, title:YouTube
 
 # -----------------------------------------------------
 # Keybindings
@@ -211,6 +218,7 @@ bind = $mainMod, B, exec, $browser --ozone-platform=wayland
 
 # --- Window Management ---
 bind = $mainMod, Q, killactive,
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # Toggle pseudotiling
 bind = $mainMod, J, togglesplit, # Toggle split direction
@@ -281,6 +289,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 
 # Keybind to show a notification with the active window's class AND title.
-bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')"
-
-
+bind = $mainMod, I, exec, notify-send "Window Info" "$(hyprctl activewindow | awk '/class:/ {print "Class: " $2} /title:/ { $1=""; print "Title: " substr($0, 2) }')" | cb
+# bind = $mainMod, I, exec, $(hyprctl activewindow | awk '/class:/ {print $2}' | wl-copy) 
+bind = $mainMod, Y, exec, /opt/thorium-browser/thorium-browser --profile-directory=Default --app-id=agimnkijcaahngcdmfeangaknmldooml
