--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -3,19 +3,7 @@
 # #######################################################################################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = HDMI-A-2, 1920x1080@60, 0x0, 1
-monitor = DP-1,     1920x1080@60, 1920x0, 1
-monitor = HDMI-A-1, 1920x1080@60, 3840x0, 1
-
-# Workspaces
-# Assign workspaces to specific monitors
-workspace = 3, monitor:HDMI-A-1, default[true]
-workspace = 1, monitor:HDMI-A-2, default[true]
-workspace = 2, monitor:DP-1, default[true]
-
-workspace = 6, monitor:HDMI-A-1
-workspace = 4, monitor:HDMI-A-2
-workspace = 5, monitor:DP-1
+monitor = , preferred, auto, 1
 
 # -----------------------------------------------------
 # Environment Variables
