Adjusted hyprland.conf for laptop performance

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -50,8 +50,6 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # exec-once = [workspace 1 silent] subl
-exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] ferdium
 exec-once = [workspace 3 silent] kitty
 exec-once = [workspace special:magic silent] obsidian
 
@@ -104,29 +102,36 @@ dwindle {
 }
 
 # -----------------------------------------------------
-# Decoration (Rounding, Shadows, Blur)
+# Decoration (Rounding, Shadows, Blur) - OPTIMIZED FOR OLDER HARDWARE
 # -----------------------------------------------------
 decoration {
-    rounding = 10
-    rounding_power = 4
+    rounding = 5  # Reduced from 10
+    rounding_power = 2  # Reduced from 4
 
     active_opacity = 1
     dim_strength = 0.1
     
     blur {
-        enabled = true
-        size = 5        # Increased from 4
-        passes = 4      # Increased from 3
+        enabled = false  # Disabled blur - major performance improvement
+        size = 5        
+        passes = 4      
         new_optimizations = true
-        xray = true     # This helps with layerrule xray
+        xray = true     
+    }
+    
+    shadow {
+        enabled = false  # Disabled shadows for performance
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
     }
 }
 
 # -----------------------------------------------------
-# Animations
+# Animations - OPTIMIZED FOR OLDER HARDWARE
 # -----------------------------------------------------
 animations {
-    enabled = yes, please :)
+    enabled = false  # Disabled animations for better performance on Intel HD 4400
 
     # --- MODIFIED: A snappier bezier curve ---
     bezier = snappy, 0.17, 0.9, 0.2, 1.0
@@ -143,6 +148,30 @@ animations {
 }
 
 # -----------------------------------------------------
+# Misc - PERFORMANCE OPTIMIZATIONS
+# -----------------------------------------------------
+misc {
+    vfr = false  # Disabled variable refresh rate for older hardware
+    disable_hyprland_logo = true
+    force_default_wallpaper = 0
+    disable_splash_rendering = true  # Faster startup
+}
+
+# -----------------------------------------------------
+# Render - OPTIMIZATIONS FOR INTEL GRAPHICS
+# -----------------------------------------------------
+render {
+    direct_scanout = true  # Performance improvement
+}
+
+# -----------------------------------------------------
+# Cursor - PERFORMANCE OPTIMIZATIONS
+# -----------------------------------------------------
+cursor {
+    no_warps = true  # Better for older hardware
+}
+
+# -----------------------------------------------------
 # Window Rules
 # -----------------------------------------------------
 windowrulev2 = float, class:^(org.kde.dolphin)$
@@ -154,6 +183,10 @@ windowrulev2 = float,class:^(brave)$                        # make brave file pi
 windowrulev2 = float, class:^(Beyond-All-Reason)$,
 
 windowrulev2 = suppressevent maximize, class:.*             # Ignore maximize requests from apps
+
+# Performance optimization for terminals
+windowrulev2 = immediate, class:^(kitty)$
+windowrulev2 = immediate, class:^(Alacritty)$
 
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.app)$   
 windowrulev2 = size 800x600,class:^(org.kde.kdeconnect.sms)$ 
@@ -250,7 +283,6 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # --- Special Workspace (Scratchpad) ---
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
 
 # --- Mouse and Scrolling ---
 bind = $mainMod, mouse_down, workspace, e+1
