--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -46,11 +46,12 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Handles privilege reque
 exec-once = dbus-update-activation-environment --systemd --all # Helps apps find the session
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# In your Hyprland config
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-# exec-once = [workspace 1 silent] subl
-exec-once = [workspace 3 silent] kitty
+# exec-once = [workspace 2 silent] $editor
+exec-once = [workspace 3 silent] $terminal
+#exec-once = [workspace 1 silent] $browser
+exec-once = [workspace 4 silent] sleep 2 && $browser --new-window https://claude.ai/new
 exec-once = [workspace special:magic silent] obsidian
 
 # -----------------------------------------------------
@@ -59,6 +60,7 @@ exec-once = [workspace special:magic silent] obsidian
 input {
     kb_layout = pl
     kb_options = caps:super # <-- This makes your Caps Lock key another Super key!
+
 
     # --- Faster keyboard repeat settings ---
     repeat_rate = 50
