Updated ssh config, take 2.

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,7 +1,7 @@
 Host github.com
     HostName github.com
     User git
-    IdentityFile ~/.ssh/id_ed25519_github.ssh
+    IdentityFile ~/.ssh/id_ed25519_github_ssh
     ForwardAgent yes
 
 Host pi
